<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_task"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"
        android:title="@string/search_task" />

    <item
        android:id="@+id/delete_All"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/delete_all"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/mark_all_done"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/mark_all_done"
        tools:ignore="AppCompatResource" />
</menu>